additional adjustments